--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -11,22 +11,10 @@
         <link rel="stylesheet" type="text/css" href="../CSS/home.css">
     </head>
     <body>
-        <nav class="navbar navbar-default">
-            <div class="container-fluid">
-            <div class="navbar-header">
-                <a class="navbar-brand" href="Home.html">WebSiteName</a>
+        <div class="header">
+            <div class="logo">
+            <image href="Home.html"/>
             </div>
-            <ul class="nav navbar-nav">
-                <li class="active"><a href="#">Home</a></li>
-                <li><a href="#">Page 1</a></li>
-                <li><a href="#">Page 2</a></li>
-                <li><a href="#">Page 3</a></li>
-            </ul>
-            </div>
-        </nav>
-        <div class="container">
-            <h3>Basic Navbar Example</h3>
-            <p>A navigation bar is a navigation header that is placed at the top of the page.</p>
         </div>
     </body>    
 </html>
