--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -11,9 +11,19 @@
         <link rel="stylesheet" type="text/css" href="../CSS/home.css">
     </head>
     <body>
-        <div class="header">
-            <div class="logo">
-            <image href="Home.html"/>
+        <div class="container">
+            <div class="header">
+                <div class="social">
+                    <a href="">    
+                        <img class="image" src="http://subirimagen.me/uploads/20180216065137.png"/>
+                    </a>
+                    <a class="socialPosition" href="">
+                        <img class="image" src="http://subirimagen.me/uploads/20180216070008.png"/>    
+                    </a>    
+                    <a href="">
+                        <img class="image" src="http://subirimagen.me/uploads/20180216065716.png"/>
+                    </a>    
+                </div>
             </div>
         </div>
     </body>    
