--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -13,14 +13,19 @@
     <body>
         <div class="container">
             <div class="header">
+                <div class="logo">
+                    <a href="../HTML/Home.html">
+                        <img class="logoIcon" src="http://subirimagen.me/uploads/20180219061353.jpg"/>
+                    </a>
+                </div>
                 <div class="social">
-                    <a href="">    
+                    <a href="https://es-la.facebook.com/bostonceltics/" target="_blank">    
                         <img class="image" src="http://subirimagen.me/uploads/20180216065137.png"/>
                     </a>
-                    <a class="socialPosition" href="">
+                    <a class="socialPosition" href="https://twitter.com/celtics?lang=es" target="_blank">
                         <img class="image" src="http://subirimagen.me/uploads/20180216070008.png"/>    
                     </a>    
-                    <a href="">
+                    <a href="https://www.instagram.com/celtics/?hl=es-la" target="_blank">
                         <img class="image" src="http://subirimagen.me/uploads/20180216065716.png"/>
                     </a>    
                 </div>
