--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../CSS/home.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/header.css">
     </head>
     <body>
         <div class="container">
@@ -28,6 +28,19 @@
                     <a href="https://www.instagram.com/celtics/?hl=es-la" target="_blank">
                         <img class="image" src="http://subirimagen.me/uploads/20180216065716.png"/>
                     </a>    
+                </div>
+            </div>
+            <div class="main">
+                <div class="tab">                
+                        <ul class="nav nav-tabs nav-justified" role="tablist">
+                        <li class="active"><a href="../HTML/Home.html">Home</a></li>
+                        <li><a href="#">HTML</a></li>
+                        <li><a href="#">CSS</a></li>
+                        <li><a href="#">About</a></li>        
+                        </ul>
+                </div>
+                <div class="home">
+                    <h1>mierda</h1>
                 </div>
             </div>
         </div>
