--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -8,7 +8,7 @@
         <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../CSS/header.css">
+        <link rel="stylesheet" type="text/css" href="../CSS/main.css">
     </head>
     <body>
         <div class="container">
@@ -33,16 +33,19 @@
             <div class="main">
                 <div class="home">
                 </div>
-                <div class="tab">                
+                <div class="tab" id="navbar">                
                         <ul class="nav nav-tabs nav-justified" role="tablist">
-                        <li class="active"><a href="../HTML/Home.html">Home</a></li>
-                        <li><a href="#">HTML</a></li>
-                        <li><a href="#">CSS</a></li>
-                        <li><a href="#">About</a></li>        
+                        <li class="active"><a href="Home.html">Home</a></li>
+                        <li><a >HTML</a></li>
+                        <li><a >CSS</a></li>
+                        <li><a >About</a></li>        
                         </ul>
                 </div>
              
             </div>
         </div>
+
+
+        <script src="../JS/main.js"></script>
     </body>    
 </html>
