Change icons location

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -15,18 +15,18 @@
             <div class="header">
                 <div class="logo">
                     <a href="../HTML/Home.html">
-                        <img class="logoIcon" src="http://subirimagen.me/uploads/20180223084221.jpg"/>
+                        <img class="logoIcon" src="../Sprites/logo.jpg"/>
                     </a>
                 </div>
                 <div class="social">
                     <a href="https://es-la.facebook.com/bostonceltics/" target="_blank">    
-                        <img class="image" src="http://subirimagen.me/uploads/20180223084109.png"/>
+                        <img class="image" src="../Sprites/facebook.png"/>
                     </a>
                     <a class="socialPosition" href="https://twitter.com/celtics?lang=es" target="_blank">
-                        <img class="image" src="http://subirimagen.me/uploads/20180223084140.png"/>    
+                        <img class="image" src="../Sprites/twitter.png"/>    
                     </a>    
                     <a href="https://www.instagram.com/celtics/?hl=es-la" target="_blank">
-                        <img class="image" src="http://subirimagen.me/uploads/20180223084202.png"/>
+                        <img class="image" src="../Sprites/instagram.png"/>
                     </a>    
                 </div>
             </div>
