--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -1,51 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
 <html>
-    <head>
-        <title>Home</title>
-        <meta charset="utf-8">
-        <meta name="viewport" content="width=device-width, initial-scale=1">
-        <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-        <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-        <link rel="stylesheet" type="text/css" href="../CSS/main.css">
-    </head>
-    <body>
-        <div class="container">
-            <div class="header">
-                <div class="logo">
-                    <a href="../HTML/Home.html">
-                        <img class="logoIcon" src="../Sprites/logo.jpg"/>
-                    </a>
-                </div>
-                <div class="social">
-                    <a href="https://es-la.facebook.com/bostonceltics/" target="_blank">    
-                        <img class="image" src="../Sprites/facebook.png"/>
-                    </a>
-                    <a class="socialPosition" href="https://twitter.com/celtics?lang=es" target="_blank">
-                        <img class="image" src="../Sprites/twitter.png"/>    
-                    </a>    
-                    <a href="https://www.instagram.com/celtics/?hl=es-la" target="_blank">
-                        <img class="image" src="../Sprites/instagram.png"/>
-                    </a>    
-                </div>
+
+<head>
+    <title>Home</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
+    <link rel="stylesheet" type="text/css" href="../CSS/main.css">
+</head>
+
+<body>
+    <div class="container">
+        <div class="header">
+            <div class="logo">
+                <a href="../HTML/home.html">
+                    <img class="logoIcon" src="../Sprites/logo.jpg" />
+                </a>
             </div>
-            <div class="main">
-                <div class="home">
-                </div>
-                <div class="tab" id="navbar">                
-                        <ul class="nav nav-tabs nav-justified" role="tablist">
-                        <li class="active"><a href="Home.html">Home</a></li>
-                        <li><a >HTML</a></li>
-                        <li><a >CSS</a></li>
-                        <li><a >About</a></li>        
-                        </ul>
-                </div>
-             
+            <div class="social">
+                <a href="https://es-la.facebook.com/bostonceltics/" target="_blank">
+                    <img class="image" src="../Sprites/facebook.png" />
+                </a>
+                <a class="socialPosition" href="https://twitter.com/celtics?lang=es" target="_blank">
+                    <img class="image" src="../Sprites/twitter.png" />
+                </a>
+                <a href="https://www.instagram.com/celtics/?hl=es-la" target="_blank">
+                    <img class="image" src="../Sprites/instagram.png" />
+                </a>
             </div>
         </div>
+        <div class="main">
+            <div class="home">
+            </div>
+            <div class="tab" id="navbar">
+                <ul class="nav nav-tabs nav-justified" role="tablist">
+                    <li class="active">
+                        <a href="home.html">Home</a>
+                    </li>
+                    <li>
+                        <a>HTML</a>
+                    </li>
+                    <li>
+                        <a>CSS</a>
+                    </li>
+                    <li>
+                        <a>About</a>
+                    </li>
+                </ul>
+            </div>
+
+        </div>
+    </div>
 
 
-        <script src="../JS/main.js"></script>
-    </body>    
+    <script src="../JS/main.js"></script>
+</body>
+
 </html>
