Starting with JQuery

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -33,15 +33,19 @@
             </div>
         </div>
         <div class="main">
-            <div class="home">
+            <div class="center">
+                <p id="home">Estoy en Home</p>
+                <p id="HTML" hidden>Estoy en HTML</p>
+                <p id="CSS" hidden>Estoy en CSS</p>
+                <p id="About" hidden>Estoy en About</p>
             </div>
             <div class="tab" id="navbar">
                 <ul class="nav nav-tabs nav-justified" role="tablist">
                     <li class="active">
-                        <a href="home.html">Home</a>
+                        <a href="home.html" id="bHome">Home</a>
                     </li>
                     <li>
-                        <a>HTML</a>
+                        <a id="bHTML">HTML</a>
                     </li>
                     <li>
                         <a>CSS</a>
