Migrate to JQuery

--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -37,20 +37,20 @@
                 <p id="home">Estoy en Home</p>
                 <p id="HTML" hidden>Estoy en HTML</p>
                 <p id="CSS" hidden>Estoy en CSS</p>
-                <p id="About" hidden>Estoy en About</p>
+                <p id="about" hidden>Estoy en About</p>
             </div>
             <div class="tab" id="navbar">
                 <ul class="nav nav-tabs nav-justified" role="tablist">
-                    <li class="active">
-                        <a href="home.html" id="bHome">Home</a>
+                    <li id="bHome" class="active">
+                        <a>Home</a>
                     </li>
-                    <li>
-                        <a id="bHTML">HTML</a>
+                    <li id="bHTML">
+                        <a>HTML</a>
                     </li>
-                    <li>
+                    <li id="bCSS">
                         <a>CSS</a>
                     </li>
-                    <li>
+                    <li id="bAbout">
                         <a>About</a>
                     </li>
                 </ul>
