--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -16,7 +16,7 @@
     <div class="container">
         <div class="header">
             <div class="logo">
-                <a href="../HTML/home.html">
+                <a href="../HTML/Home.html">
                     <img class="logoIcon" src="../Sprites/logo.jpg" />
                 </a>
             </div>
