--- a/HTML/Home.html
+++ b/HTML/Home.html
@@ -31,6 +31,9 @@
                     <img class="image" src="../Sprites/instagram.png" />
                 </a>
             </div>
+            <div class="login">
+                <p id="login">LogIn</button>
+            </div>
         </div>
         <div class="main">
             <div class="center">
@@ -58,6 +61,36 @@
 
         </div>
     </div>
+    <div id="loginModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+      
+          <div class="modal-content">
+            <div class="modal-header">
+              <button type="button" class="close" data-dismiss="modal">&times;</button>
+              <h4 class="modal-title">Log In</h4>
+            </div>
+            <div class="modal-body">
+              <form role="form">
+                  <div class="form-group alignLeft">
+                        <span class="glyphicon glyphicon-user"></span>
+                        <label for="usrname"> Username</label>
+                    <p></p>
+                    <input class="w3-input w3-border w3-margin-bottom" type="text" placeholder="Enter Username" name="username" required>
+                    <p></p>
+                    <span class="glyphicon glyphicon-eye-open"></span>
+                    <label for="psw"> Password</label>
+                    <p></p>
+                    <input class="w3-input w3-border" type="password" placeholder="Enter Password" name="psw" required>
+                  </div>
+              </form>
+            </div>
+            <div class="modal-footer">
+              <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+            </div>
+          </div>
+      
+        </div>
+      </div>
 
 
     <script src="../JS/main.js"></script>
